docs/47.0.0/default/AWS/index.md
---
permalink: /47.0.0/default/AWS/
---

# AWS



* [ACMPCA](ACMPCA/index.md)
* [APS](APS/index.md)
* [AccessAnalyzer](AccessAnalyzer/index.md)
* [AmazonMQ](AmazonMQ/index.md)
* [Amplify](Amplify/index.md)
* [ApiGateway](ApiGateway/index.md)
* [ApiGatewayV2](ApiGatewayV2/index.md)
* [AppConfig](AppConfig/index.md)
* [AppFlow](AppFlow/index.md)
* [AppIntegrations](AppIntegrations/index.md)
* [AppMesh](AppMesh/index.md)
* [AppRunner](AppRunner/index.md)
* [AppStream](AppStream/index.md)
* [AppSync](AppSync/index.md)
* [ApplicationAutoScaling](ApplicationAutoScaling/index.md)
* [ApplicationInsights](ApplicationInsights/index.md)
* [Athena](Athena/index.md)
* [AuditManager](AuditManager/index.md)
* [AutoScaling](AutoScaling/index.md)
* [AutoScalingPlans](AutoScalingPlans/index.md)
* [Backup](Backup/index.md)
* [Batch](Batch/index.md)
* [Budgets](Budgets/index.md)
* [CE](CE/index.md)
* [CUR](CUR/index.md)
* [Cassandra](Cassandra/index.md)
* [CertificateManager](CertificateManager/index.md)
* [Chatbot](Chatbot/index.md)
* [Cloud9](Cloud9/index.md)
* [CloudFormation](CloudFormation/index.md)
* [CloudFront](CloudFront/index.md)
* [CloudTrail](CloudTrail/index.md)
* [CloudWatch](CloudWatch/index.md)
* [CodeArtifact](CodeArtifact/index.md)
* [CodeBuild](CodeBuild/index.md)
* [CodeCommit](CodeCommit/index.md)
* [CodeDeploy](CodeDeploy/index.md)
* [CodeGuruProfiler](CodeGuruProfiler/index.md)
* [CodeGuruReviewer](CodeGuruReviewer/index.md)
* [CodePipeline](CodePipeline/index.md)
* [CodeStar](CodeStar/index.md)
* [CodeStarConnections](CodeStarConnections/index.md)
* [CodeStarNotifications](CodeStarNotifications/index.md)
* [Cognito](Cognito/index.md)
* [Config](Config/index.md)
* [Connect](Connect/index.md)
* [CustomerProfiles](CustomerProfiles/index.md)
* [DAX](DAX/index.md)
* [DLM](DLM/index.md)
* [DMS](DMS/index.md)
* [DataBrew](DataBrew/index.md)
* [DataPipeline](DataPipeline/index.md)
* [DataSync](DataSync/index.md)
* [Detective](Detective/index.md)
* [DevOpsGuru](DevOpsGuru/index.md)
* [DirectoryService](DirectoryService/index.md)
* [DocDB](DocDB/index.md)
* [DynamoDB](DynamoDB/index.md)
* [EC2](EC2/index.md)
* [ECR](ECR/index.md)
* [ECS](ECS/index.md)
* [EFS](EFS/index.md)
* [EKS](EKS/index.md)
* [EMR](EMR/index.md)
* [EMRContainers](EMRContainers/index.md)
* [ElastiCache](ElastiCache/index.md)
* [ElasticBeanstalk](ElasticBeanstalk/index.md)
* [ElasticLoadBalancing](ElasticLoadBalancing/index.md)
* [ElasticLoadBalancingV2](ElasticLoadBalancingV2/index.md)
* [Elasticsearch](Elasticsearch/index.md)
* [EventSchemas](EventSchemas/index.md)
* [Events](Events/index.md)
* [FIS](FIS/index.md)
* [FMS](FMS/index.md)
* [FSx](FSx/index.md)
* [FinSpace](FinSpace/index.md)
* [FraudDetector](FraudDetector/index.md)
* [GameLift](GameLift/index.md)
* [GlobalAccelerator](GlobalAccelerator/index.md)
* [Glue](Glue/index.md)
* [Greengrass](Greengrass/index.md)
* [GreengrassV2](GreengrassV2/index.md)
* [GroundStation](GroundStation/index.md)
* [GuardDuty](GuardDuty/index.md)
* [HealthLake](HealthLake/index.md)
* [IAM](IAM/index.md)
* [IVS](IVS/index.md)
* [ImageBuilder](ImageBuilder/index.md)
* [Inspector](Inspector/index.md)
* [IoT](IoT/index.md)
* [IoT1Click](IoT1Click/index.md)
* [IoTAnalytics](IoTAnalytics/index.md)
* [IoTCoreDeviceAdvisor](IoTCoreDeviceAdvisor/index.md)
* [IoTEvents](IoTEvents/index.md)
* [IoTFleetHub](IoTFleetHub/index.md)
* [IoTSiteWise](IoTSiteWise/index.md)
* [IoTThingsGraph](IoTThingsGraph/index.md)
* [IoTWireless](IoTWireless/index.md)
* [KMS](KMS/index.md)
* [Kendra](Kendra/index.md)
* [Kinesis](Kinesis/index.md)
* [KinesisAnalytics](KinesisAnalytics/index.md)
* [KinesisAnalyticsV2](KinesisAnalyticsV2/index.md)
* [KinesisFirehose](KinesisFirehose/index.md)
* [LakeFormation](LakeFormation/index.md)
* [Lambda](Lambda/index.md)
* [LicenseManager](LicenseManager/index.md)
* [Lightsail](Lightsail/index.md)
* [Location](Location/index.md)
* [Logs](Logs/index.md)
* [LookoutEquipment](LookoutEquipment/index.md)
* [LookoutMetrics](LookoutMetrics/index.md)
* [LookoutVision](LookoutVision/index.md)
* [MSK](MSK/index.md)
* [MWAA](MWAA/index.md)
* [Macie](Macie/index.md)
* [ManagedBlockchain](ManagedBlockchain/index.md)
* [MediaConnect](MediaConnect/index.md)
* [MediaConvert](MediaConvert/index.md)
* [MediaLive](MediaLive/index.md)
* [MediaPackage](MediaPackage/index.md)
* [MediaStore](MediaStore/index.md)
* [MemoryDB](MemoryDB/index.md)
* [Neptune](Neptune/index.md)
* [NetworkFirewall](NetworkFirewall/index.md)
* [NetworkManager](NetworkManager/index.md)
* [NimbleStudio](NimbleStudio/index.md)
* [OpenSearchService](OpenSearchService/index.md)
* [OpsWorks](OpsWorks/index.md)
* [OpsWorksCM](OpsWorksCM/index.md)
* [Panorama](Panorama/index.md)
* [Pinpoint](Pinpoint/index.md)
* [PinpointEmail](PinpointEmail/index.md)
* [QLDB](QLDB/index.md)
* [QuickSight](QuickSight/index.md)
* [RAM](RAM/index.md)
* [RDS](RDS/index.md)
* [Redshift](Redshift/index.md)
* [Rekognition](Rekognition/index.md)
* [ResourceGroups](ResourceGroups/index.md)
* [RoboMaker](RoboMaker/index.md)
* [Route53](Route53/index.md)
* [Route53RecoveryControl](Route53RecoveryControl/index.md)
* [Route53RecoveryReadiness](Route53RecoveryReadiness/index.md)
* [Route53Resolver](Route53Resolver/index.md)
* [S3](S3/index.md)
* [S3ObjectLambda](S3ObjectLambda/index.md)
* [S3Outposts](S3Outposts/index.md)
* [SDB](SDB/index.md)
* [SES](SES/index.md)
* [SNS](SNS/index.md)
* [SQS](SQS/index.md)
* [SSM](SSM/index.md)
* [SSMContacts](SSMContacts/index.md)
* [SSMIncidents](SSMIncidents/index.md)
* [SSO](SSO/index.md)
* [SageMaker](SageMaker/index.md)
* [SecretsManager](SecretsManager/index.md)
* [SecurityHub](SecurityHub/index.md)
* [ServiceCatalog](ServiceCatalog/index.md)
* [ServiceCatalogAppRegistry](ServiceCatalogAppRegistry/index.md)
* [ServiceDiscovery](ServiceDiscovery/index.md)
* [Signer](Signer/index.md)
* [StepFunctions](StepFunctions/index.md)
* [Synthetics](Synthetics/index.md)
* [Timestream](Timestream/index.md)
* [Transfer](Transfer/index.md)
* [WAF](WAF/index.md)
* [WAFRegional](WAFRegional/index.md)
* [WAFv2](WAFv2/index.md)
* [Wisdom](Wisdom/index.md)
* [WorkSpaces](WorkSpaces/index.md)
* [XRay](XRay/index.md)